src/objects/TR1__ResumeParserCredentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TR1__Database_Name__c</fullName>
        <label>Database Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ResumeParserCredentials</label>
</CustomObject>